--- a/source/DotNetBay.WPF/DotNetBay.WPF.csproj
+++ b/source/DotNetBay.WPF/DotNetBay.WPF.csproj
@@ -75,6 +75,9 @@
     </ApplicationDefinition>
     <Compile Include="Command\BidCmd.cs" />
     <Compile Include="Command\NewAuctionCmd.cs" />
+    <Compile Include="View\MainWindow.xaml.cs">
+      <DependentUpon>MainWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\SellView.xaml.cs">
       <DependentUpon>SellView.xaml</DependentUpon>
     </Compile>
@@ -94,7 +97,7 @@
     <Compile Include="View\BidView.xaml.cs">
       <DependentUpon>BidView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Converters\BoolToStatusConverter.cs" />
+    <Compile Include="Converter\BoolToStatusConverter.cs" />
     <Page Include="View\SellView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
