Removed BidCmd Refactored Commands to use only AuctionCommand<T> Added CloseWindowAction to cancel buttons

--- a/source/DotNetBay.WPF/DotNetBay.WPF.csproj
+++ b/source/DotNetBay.WPF/DotNetBay.WPF.csproj
@@ -73,8 +73,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Command\BidCmd.cs" />
-    <Compile Include="Command\NewAuctionCmd.cs" />
+    <Compile Include="Command\AuctionCmd.cs" />
     <Compile Include="ViewModel\BidViewModel.cs" />
     <Compile Include="ViewModel\SellViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
