added connection string to app config

--- a/source/DotNetBay.Data.EF/App.config
+++ b/source/DotNetBay.Data.EF/App.config
@@ -10,4 +10,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="DatabaseConnection"
+    connectionString="Data Source=. \SQLEXPRESS;Initial Catalog=DneadAuctionDbLocal;Integrated Security=True"
+    providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
