--- a/source/DotNetBay.Data.EF/DotNetBay.Data.EF.csproj
+++ b/source/DotNetBay.Data.EF/DotNetBay.Data.EF.csproj
@@ -51,6 +51,7 @@
     <Compile Include="EFMainRepository.cs" />
     <Compile Include="EFMainRepositoryFactory.cs" />
     <Compile Include="MainDbContext.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
