--- a/source/DotNetBay.Data.EF/DotNetBay.Data.EF.csproj
+++ b/source/DotNetBay.Data.EF/DotNetBay.Data.EF.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DateTime2Convention.cs" />
     <Compile Include="EFMainRepository.cs" />
     <Compile Include="EFMainRepositoryFactory.cs" />
     <Compile Include="MainDbContext.cs" />
