Preparing database replacement

--- a/source/DotNetBay.WPF/DotNetBay.WPF.csproj
+++ b/source/DotNetBay.WPF/DotNetBay.WPF.csproj
@@ -138,6 +138,10 @@
       <Project>{9ef46b21-b552-4cc6-a4c0-e81091a4064b}</Project>
       <Name>DotNetBay.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DotNetBay.Data.EF\DotNetBay.Data.EF.csproj">
+      <Project>{b79e0b3c-1b31-4b0b-a606-c1dccc951c7e}</Project>
+      <Name>DotNetBay.Data.EF</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DotNetBay.Data.FileStorage\DotNetBay.Data.FileStorage.csproj">
       <Project>{92942123-c7ec-4418-9b48-f5d62be7e7a3}</Project>
       <Name>DotNetBay.Data.FileStorage</Name>
