--- a/source/DotNetBay.WebApp/packages.config
+++ b/source/DotNetBay.WebApp/packages.config
@@ -23,4 +23,5 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
+  <package id="Unity.Mvc5" version="1.1" targetFramework="net45" />
 </packages>
